--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,13 @@
             <artifactId>sdk</artifactId>
             <version>1.0.7</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.qiwi</groupId>
+            <artifactId>bill-payments-java-sdk</artifactId>
+            <version>1.5.0</version>
+        </dependency>
     </dependencies>
+
 
 </project>
